[gd_scene load_steps=4 format=3 uid="uid://cjcsvawt0fqcx"]

[ext_resource type="Script" path="res://addons/btree/Editor/create.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cqdbvcfj4o0oc" path="res://addons/btree/Editor/tree_root/root.tscn" id="2"]
[ext_resource type="Script" path="res://addons/btree/Editor/graph.gd" id="5"]

[node name="editor" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="group" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="create" type="MenuButton" parent="group"]
layout_mode = 2
text = "Create"
item_count = 17
popup/item_0/text = "Task"
popup/item_0/id = 1
popup/item_1/text = "Selector"
popup/item_1/id = 3
popup/item_2/text = "Sequence"
popup/item_2/id = 2
popup/item_3/text = "Priority Selector"
popup/item_3/id = 4
popup/item_4/text = "Priority Condition"
popup/item_4/id = 5
popup/item_5/text = "Paralel"
popup/item_5/id = 6
popup/item_6/text = "Mute"
popup/item_6/id = 7
popup/item_7/text = "Repeat"
popup/item_7/id = 8
popup/item_8/text = "While Node"
popup/item_8/id = 9
popup/item_9/text = "Wait Node"
popup/item_9/id = 10
popup/item_10/text = "Race Node"
popup/item_10/id = 11
popup/item_11/text = "Random Selector"
popup/item_11/id = 12
popup/item_12/text = "Random Sequence"
popup/item_12/id = 13
popup/item_13/text = "Inverter"
popup/item_13/id = 14
popup/item_14/text = "Random Repeat"
popup/item_14/id = 15
popup/item_15/text = "Random Wait"
popup/item_15/id = 16
popup/item_16/text = "Delete Selected Node"
popup/item_16/id = -11
script = ExtResource("1")
graph_path = NodePath("../../graph")
hint_path = NodePath("../../footer/hint")

[node name="save" type="Button" parent="group"]
layout_mode = 2
text = "Save"

[node name="debug" type="Button" parent="group"]
layout_mode = 2
text = "Debug"

[node name="help" type="Button" parent="group"]
layout_mode = 2
text = "Help"

[node name="graph" type="GraphEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
script = ExtResource("5")
hint_path = NodePath("../footer/hint")
create_path = NodePath("../group/create")

[node name="root" parent="graph" instance=ExtResource("2")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 441.0
offset_top = -57.0
offset_right = 510.0
offset_bottom = 3.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
position_offset = Vector2(441, 232)
title = "root"

[node name="footer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="hint" type="Label" parent="footer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="search" type="HBoxContainer" parent="footer"]
layout_mode = 2

[node name="Label" type="Label" parent="footer/search"]
layout_mode = 2
text = "Search Node : "

[node name="search_bar" type="LineEdit" parent="footer/search"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
caret_blink = true
caret_blink_interval = 0.5

[node name="prev" type="Button" parent="footer/search"]
layout_mode = 2
tooltip_text = "ctrl + shift + LEFT"
text = "<"

[node name="next" type="Button" parent="footer/search"]
layout_mode = 2
tooltip_text = "ctrl + shift + RIGHT"
text = ">"

[connection signal="pressed" from="group/save" to="graph" method="_on_save_pressed"]
[connection signal="pressed" from="group/debug" to="graph" method="_on_debug_pressed"]
[connection signal="pressed" from="group/help" to="graph" method="_on_help_pressed"]
[connection signal="connection_request" from="graph" to="graph" method="connection_request"]
[connection signal="disconnection_request" from="graph" to="graph" method="disconnection_request"]
[connection signal="gui_input" from="graph" to="graph" method="gui_input"]
[connection signal="node_selected" from="graph" to="graph" method="node_selected"]
[connection signal="popup_request" from="graph" to="graph" method="popup_request"]
[connection signal="text_changed" from="footer/search/search_bar" to="graph" method="_on_search_bar_text_changed"]
[connection signal="pressed" from="footer/search/prev" to="graph" method="_on_prev_pressed"]
[connection signal="pressed" from="footer/search/next" to="graph" method="_on_next_pressed"]
